# Continua

./: .air.toml  .coderabbit.yaml  .dockerignore  .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.old.md  config.example.yaml  go.mod  go.sum  go.work  go.work.sum  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  ux_design.html
.claude/: phase2-report.md  settings.json
.claude/commands/: 5-whys.md  README.md  add-to-todos.md  build.md  check-todos.md  dev-docs-update.md  dev.md  generate.md  migrate.md  openapi-sync.md  optimize.md  pr-check.md  security-scan.md  skill-sync-config.json  smart-commit.md  whats-next.md
.claude/diary/: 2026-01-12-session-1.md  2026-01-12-session-2.md  2026-01-13-session-1.md  2026-01-13-session-2.md  2026-01-14-session-1.md  2026-01-15-session-1.md  2026-01-15-session-2.md
.claude/hooks/: README.md  bash-command-safety.py  codegen-drift-guard.sh  context-monitor.py  go-format-on-edit.sh  migration-immutability-guard.py  post-tool-use-tracker.sh  pre-compact.sh  protected-files-blocker.py  settings.json  settings.json.bak  skill-activation-prompt.sh
.claude/skills/: README.md  skill-rules.json
.claude/subagents/: README.md
.codex/: README.md
.codex/references/: commands.md  decisions.md  guardrails.md  subagents.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  e2e.yml  python-sdk-release.yml
apps/web/: next.config.js  package.json
cmd/continua/: main.go  main_test.go
contracts/: index.ts  package.json  tsconfig.json  tsup.config.ts
contracts/openapi/: openapi.bundle.yaml  openapi.yaml
contracts/scripts/: postprocess-generated-nullable-refs.mjs
contracts/websocket/: events.schema.json  events.ts  generate.ts
db/platform/: sqlc.yaml
deploy/docker/: .dockerignore  Dockerfile
deploy/docker-compose/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docker/: Dockerfile.server  Dockerfile.test-python  Dockerfile.test-typescript  Dockerfile.web  docker-compose.test.yml  docker-compose.yml
docs/: 001_initial_schema.sql  CONTINUA_ARCHITECTURE_PLAN_v1.md  CONTINUA_DESIGN_DECISIONS_v1.md  CONTINUA_IMPLEMENTATION_CHECKLIST_v1.md  DEBUGGER_PLATFORM_BASELINE.md  GENERATED_CODE.md  INGESTION_FLOW.mermaid.md  PHASE5_CURRENT_STATE_REPORT.md  README.md  api-design.md  async_ingest_rollout.md  event-conventions.md  getting-started.md  readme-improvement-changelog.md  readme-skill-setup-notes.md  setup.md  temp.md
docs-site/: docs.json  index.mdx  roadmap.mdx
docs-site/api-reference/: auth-and-headers.mdx  (+1 more)
engine/: README.md  go.mod  go.sum
openspec/: AGENTS.md  project.md
proto/: buf.gen.yaml  buf.yaml
scripts/: build.sh  check-generated.sh  demo.sh  dev.sh  generate.sh  seed-demo.sh  seed-engine-demo.sql  seed_engine_demo_test.go  setup-dev.sh  setup.sh  test.sh  wait-for-it.sh
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: agentic_flow_stress.py  e2e_demo.py  remote_greeting_worker.py
sdks/python/scripts/: generate_types.py
sdks/python/src/continua/: __init__.py  agent.py  batch.py  client.py  context.py  decorators.py  engine_control.py  exceptions.py  session.py  span.py  trace.py  types.py  worker.py
sdks/python/src/continua/_generated/: __init__.py
sdks/python/src/continua/_generated/continua/api/v1/: execution_pb2.py  execution_pb2_grpc.py  gateway_pb2.py  gateway_pb2_grpc.py  recorder_pb2.py  recorder_pb2_grpc.py
sdks/python/src/continua/_generated/continua/common/v1/: errors_pb2.py  messages_pb2.py
sdks/python/src/continua/_generated/continua/events/v1/: agent_events_pb2.py
sdks/python/tests/: __init__.py  conftest.py  support.py  test_agentic_flow_stress_runner.py  test_batch.py  test_client.py  test_e2e_demo_seed.py  test_engine_control.py  test_engine_control_integration.py  test_errors.py  test_integration.py  test_remote_greeting_worker_example.py  test_span.py  test_trace.py  test_worker.py  test_worker_e2e_integration.py
server/: go.mod
tools/: tools.go
web/: index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
(+985 files in other folders)
