[project]
name = "continua-sdk"
version = "0.1.0"
description = "Python SDK for Continua — AI-agent observability and durable-engine control"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Continua AI" },
]
keywords = [
    "agents",
    "ai",
    "debugging",
    "durable-execution",
    "llm",
    "observability",
    "tracing",
    "workflows",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/aryanVijaywargia/Continua"
Repository = "https://github.com/aryanVijaywargia/Continua"
Documentation = "https://github.com/aryanVijaywargia/Continua/tree/main/sdks/python"
Issues = "https://github.com/aryanVijaywargia/Continua/issues"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "datamodel-code-generator>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/continua"]
artifacts = ["src/continua/py.typed"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
